# dubhe-wip

./: .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.base.mjs  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: lazy-crews-stick.md  short-forks-wait.md
.github/workflows/: README.md  changeset.yml  pr-checks.yml  publish.yml  sui-rust-indexer-release.yml  unified-release.yml
.husky/: pre-commit  pre-push
assets/article/: ARTICLE.MD
crates/dubhe-channel/: Cargo.toml
crates/dubhe-channel/src/: main.rs
crates/dubhe-common/: Cargo.toml
crates/dubhe-common/src/: events.rs  lib.rs  primitives.rs  proto_converter.rs  query.rs  sql.rs  table.rs
crates/dubhe-common/src/db/: mod.rs  postgres.rs  sqlite.rs  traits.rs
crates/dubhe-db/: Cargo.toml
crates/dubhe-db/src/: in_memory_db.rs  lib.rs
crates/dubhe-db/src/interface/: async_db.rs  empty_db.rs  mod.rs
crates/dubhe-indexer/: Cargo.toml  config.example.toml  dubhe.config.json  framework.config.json  indexer.db  local_reader_progress
crates/dubhe-indexer-api/: Cargo.toml
crates/dubhe-indexer-api/proto/: dubhe_grpc.proto
crates/dubhe-indexer-api/src/: grpc.rs  lib.rs  main.rs
crates/dubhe-indexer-client/: Cargo.toml  README.md
crates/dubhe-indexer-client/src/: client.rs  lib.rs  main.rs  types.rs
crates/dubhe-indexer-graphql/: Cargo.toml  README.md
crates/dubhe-indexer-graphql-client/: Cargo.toml
crates/dubhe-indexer-graphql-client/src/: client.rs  lib.rs  main.rs  types.rs
crates/dubhe-indexer-graphql/src/: config.rs  database.rs  health.rs  lib.rs  main.rs  playground.rs  schema.rs  server.rs  subscriptions.rs
crates/dubhe-indexer-graphql/src/templates/: playground.hbs
crates/dubhe-indexer-graphql/templates/: graphiql.min.css  playground.hbs
crates/dubhe-indexer-grpc/: Cargo.toml  build.rs
crates/dubhe-indexer-grpc-client/: Cargo.toml  README.md  build.rs
crates/dubhe-indexer-grpc-client/examples/: subscribe_all_tables.rs  subscribe_specific_tables.rs
crates/dubhe-indexer-grpc-client/src/: client.rs  lib.rs  main.rs  tests.rs  types.rs
crates/dubhe-indexer-grpc/proto/: dubhe_grpc.proto
crates/dubhe-indexer-grpc/src/: grpc.rs  lib.rs  main.rs  tests.rs  types.rs
crates/dubhe-indexer/src/: args.rs  config.rs  db.rs  handlers.rs  lib.rs  main.rs  notify.rs  proxy.rs  sql.rs  worker.rs
crates/dubhe-indexer/src/sui_data_ingestion_core/: executor.rs  mod.rs  reader.rs  reducer.rs  worker_pool.rs
crates/dubhe-indexer/src/sui_data_ingestion_core/progress_store/: file.rs  mod.rs
crates/dubhe-state/: Cargo.toml
crates/dubhe-state/src/: dubhe_state.rs  lib.rs
crates/dubhe-vm/: Cargo.toml
crates/dubhe-vm/src/: lib.rs  ptb_runner.rs
docs/: README.md  package.json  pnpm-lock.yaml  theme.config.tsx
docs/pages/: _app.tsx  contribute.mdx  dubhe.mdx  faq.mdx  index.mdx
docs/pages/dubhe/: _meta.ts  sui.mdx
docs/pages/dubhe/dubheos/: _meta.ts
docs/pages/dubhe/dubheos/quick-start/: _meta.ts  prerequisites.mdx
docs/pages/dubhe/sui/: _meta.ts  cli.mdx  client.mdx  ecs.mdx  examples.mdx  graphql-client.mdx  graphql-server.mdx  indexer.mdx  production-deployment.mdx  schemas.mdx
docs/pages/dubhe/sui/quick-start/: _meta.ts  prerequisites.mdx  project-setup.mdx
docs/pages/dubhe/sui/schemas/: _meta.ts  (+4 more)
docs/pages/whitepaper/: _meta.ts  dubhe-channel-technical-whitepaper.mdx  dubhe-engine-technical-whitepaper.mdx  dubhe-os-technical-whitepaper.mdx  governance-framework.mdx  project-overview.mdx  roadmap-milestones.mdx  technology-deep-dive.mdx  token-economics.mdx
e2e/: README.md  counter.config.ts  dubhe.config.json  dubhe.config.ts  metadata.json  package.json
e2e-tests/: .env  .gitignore  dubhe.config.ts  package.json
e2e-tests/scripts/: tx.ts
e2e-tests/src/dubhe/: Move.toml
e2e/scripts/: tx.ts
e2e/src/counter/: Move.toml
e2e/src/dubhe/: Move.toml
e2e/src/example/: Move.toml
examples/sui/constantinople/: dubhe.config.ts  package.json
examples/sui/dms/: .gitignore  dubhe.config.ts  package.json
framework/: README.md  dubhe.config.json  dubhe.config.ts  package.json
framework/src/dubhe/: Move.toml
sui-packages/0x2/: Move.toml
sui-packages/0x3/: Move.toml
sui-packages/0x5f6b90fb5fb77fb9a83d894dfcb5e6e840fc9e644382231d5f6fc5181a3ea31e/: Move.toml
sui-packages/0x5f6b90fb5fb77fb9a83d894dfcb5e6e840fc9e644382231d5f6fc5181a3ea31e/.history/sui_localnet/: latest.json
sui-packages/0x5f6b90fb5fb77fb9a83d894dfcb5e6e840fc9e644382231d5f6fc5181a3ea31e/sources/codegen/: genesis.move
sui-packages/0x5f6b90fb5fb77fb9a83d894dfcb5e6e840fc9e644382231d5f6fc5181a3ea31e/sources/scripts/: deploy_hook.move
sui-packages/0x5f6b90fb5fb77fb9a83d894dfcb5e6e840fc9e644382231d5f6fc5181a3ea31e/sources/systems/: counter.move
sui-packages/0x5f6b90fb5fb77fb9a83d894dfcb5e6e840fc9e644382231d5f6fc5181a3ea31e/sources/tests/: counter.move
sui-packages/0xfbf6321dc61d931098c313d7ffdf075e5b7b65bf21ab66d9ce978fbe889d78db/: Move.toml
sui-packages/0xfbf6321dc61d931098c313d7ffdf075e5b7b65bf21ab66d9ce978fbe889d78db/.history/sui_localnet/: latest.json
sui-packages/0xfbf6321dc61d931098c313d7ffdf075e5b7b65bf21ab66d9ce978fbe889d78db/sources/scripts/: deploy_hook.move
templates/101/aptos-template/: package.json  tailwind.config.js
templates/101/initia-template/: next.config.js  package.json
templates/101/movement-template/: README.md  package.json
templates/101/rooch-template/: README.md  package.json
templates/101/sui-template/: mprocs.yaml  package.json  pnpm-lock.yaml
templates/cocos/aptos-template/: README.md  package.json
templates/cocos/aptos-template/scripts/: formatAccount.ts
templates/cocos/cocos-lib-builder/: package-lock.json
templates/cocos/sui-template/: package.json
templates/cocos/sui-template/scripts/: storeConfig.ts
templates/contract/sui-template/: .gitignore  dubhe.config.ts  package.json
templates/nextjs/aptos-template/: README.md  next-i18next.config.js  package.json
templates/nextjs/sui-template/: UPGRADE_NOTES.md  mprocs.yaml  package.json  pnpm-lock.yaml
(+234 files in other folders)
