[workspace]
resolver = "2"

members = [
  "crates/dubhe-indexer",
  "crates/dubhe-common",
  "crates/dubhe-indexer-grpc",
  "crates/dubhe-indexer-grpc-client",
  "crates/dubhe-indexer-graphql",
  "crates/dubhe-indexer-graphql-client",
]

[workspace.dependencies]
dubhe-common = { path = "crates/dubhe-common" }
serde_yaml = "0.9"
toml = "0.8"
async-trait = "0.1.83"
tokio = { version = "1.38.0", features = ["full"]}
prometheus = "0.13.3"
anyhow = "1.0.86"
serde = { version = "1.0.215", features = ["derive"] }
primitive-types = { version = "0.10.1", features = ["impl-serde"]}
diesel = { version = "2.2.0", features = ["serde_json"] }
diesel_migrations = { version = "2.2.0" }
diesel-async = { version = "0.5", features = ["bb8", "postgres"] }
futures-util = "0.3.30"
dotenvy = "0.15"
tokio-postgres-rustls = "0.12.0"
tokio-postgres = "0.7.12"
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "tls12",
  "ring",
] }
webpki-roots = "0.26.3"
serde_json = { version = "1.0.95", features = ["preserve_order"] }
log = "0.4"
env_logger = "0.10"
bcs = "0.1.4"
hex = "0.4.3"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
backoff = { version = "0.4.0", features = [
  "futures",
  "futures-core",
  "pin-project-lite",
  "tokio",
  "tokio_1",
] }

futures = "0.3.28"

notify = "6.1.1"
object_store = { version = "0.11.2", features = [
  "aws",
  "gcp",
  "azure",
  "http",
] }

tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tracing = "0.1.37"
url = "2.3.1"
tempfile = "3.3.0"
tap = "1.0.1"
rusqlite = "0.30.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "json", "chrono"] }


sui-storage = { git = "https://github.com/mystenlabs/sui", tag = "testnet-v1.58.1"}
sui-sdk = { git = "https://github.com/mystenlabs/sui", tag = "testnet-v1.58.1"}
sui-protocol-config ={ git = "https://github.com/mystenlabs/sui", tag = "testnet-v1.58.1"}
sui-rpc-api = { git = "https://github.com/mystenlabs/sui", tag = "testnet-v1.58.1"}
sui_types = { git = "https://github.com/mystenlabs/sui", package = "sui-types", tag = "testnet-v1.58.1"}
move-core-types = { git = "https://github.com/mystenlabs/sui", tag = "testnet-v1.58.1"}
mysten-service = { git = "https://github.com/mystenlabs/sui", tag = "testnet-v1.58.1"}
mysten-metrics = { git = "https://github.com/mystenlabs/sui", tag = "testnet-v1.58.1"}
sui-indexer-alt-framework = { git = "https://github.com/mystenlabs/sui", tag = "testnet-v1.58.1"}
sui-indexer-alt-framework-store-traits = { git = "https://github.com/mystenlabs/sui", tag = "testnet-v1.58.1"}