[package]
name = "dubhe-indexer-grpc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dubhe-indexer-grpc = { path = "../dubhe-indexer-grpc" }

[build-dependencies]
tonic-build = "0.10"

[lib]
name = "dubhe_indexer_grpc_client"
path = "src/lib.rs"