[package]
name = "dubhe-indexer"
version = "1.2.0-pre.71"
edition = "2021"

[dependencies]
tokio-util = "0.7.13"
serde_yaml = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
dubhe-common = { workspace = true }
dubhe-indexer-grpc = { path = "../dubhe-indexer-grpc" }
dubhe-indexer-graphql = { path = "../dubhe-indexer-graphql" }
tokio = { workspace = true }
sui_types = { workspace = true }
prometheus = { workspace = true }
anyhow = { workspace = true }
move-core-types = { workspace = true }
mysten-service = { workspace = true }
mysten-metrics = { workspace = true }
serde = { workspace = true }
primitive-types = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
diesel-async = { workspace = true }
futures-util = { workspace = true }
dotenvy = { workspace = true }
tokio-postgres-rustls = { workspace = true }
tokio-postgres = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
bcs = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
backoff = { workspace = true }

futures = { workspace = true }

notify = { workspace = true }
object_store = { workspace = true }

tokio-stream = { workspace = true }
tracing = { workspace = true }
sui-storage = { workspace = true }
sui-sdk = { workspace = true }
url = { workspace = true }
tempfile = { workspace = true }
tap = { workspace = true }
sui-protocol-config ={ workspace = true }
sui-rpc-api = { workspace = true }

uuid = { version = "1.0", features = ["v4", "serde"] }

# Web server dependencies
warp = "0.3"
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
tower = { version = "0.4", features = ["full"] }
tonic = "0.10"
tonic-web = "0.10"
tower-http = { version = "0.6", features = ["cors"] }
prost-types = "0.12"
sui-indexer-alt-framework = { workspace = true }
sui-indexer-alt-framework-store-traits = { workspace = true }


[dev-dependencies]
rand = "0.8.5"