[package]
name = "dubhe-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
sui-types = { workspace = true }
bcs = { workspace = true }
move-vm-runtime = { workspace = true }
sui-move-natives-latest = { workspace = true }
sui-protocol-config = { workspace = true }
move-core-types = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
prometheus = { workspace = true }
sui-adapter-latest = { workspace = true }
dubhe-db = { path = "../dubhe-db" }
dubhe-common = { workspace = true }
sui-sdk = { workspace = true }
sui-move-build = { workspace = true }
sui-json-rpc-types = { git = "https://github.com/mystenlabs/sui", tag = "testnet-v1.58.1"}